BETA 2.0: Rediseño y modificacion del pom.xml para crear JAR